versions/3.4.0/docs/Parameters.md
# Parameters

## Properties

Name | Type | Description | Notes
------------ | ------------- | ------------- | -------------
**analytics** | **Bool** |  | [optional] 
**brandingCss** | **String** |  | [optional] 
**brandingLogo** | **String** |  | [optional] 
**externalUrl** | **String** | http://host/ | [optional] 
**fileManagerRecycleBin** | **Bool** | Recycle bins are usually either in Workspace/Share or Volume folder | [optional] 
**httpsRedirect** | **String** |  | [optional] 
**language** | **String** |  | [optional] 
**ltfsDefaultRestoreToOriginalLocation** | **Bool** |  | [optional] 
**ltfsDefaultSearchDirectories** | **Bool** |  | [optional] 
**ltfsLibraryAddress** | **String** |  | [optional] 
**mailStyling** | **[String: String]** |  | [optional] 
**mediaAutoPlay** | **Bool** |  | [optional] 
**mediaAutoProxy** | **Bool** |  | [optional] 
**mediaAutoScan** | **Bool** |  | [optional] 
**mediaAutoTransport** | **Bool** |  | [optional] 
**mediaAutoVeritoneUpload** | **Bool** |  | [optional] 
**mediaDefaultCustomFieldType** | **String** |  | [optional] 
**mediaDefaultDeleteBehaviour** | **String** |  | [optional] 
**mediaForceShowDeleted** | **Bool** |  | [optional] 
**mediaKeepSelectionWhenBrowsing** | **Bool** |  | [optional] 
**mediaRecycleBin** | **Bool** | Recycle bin is usually in the .recycle-bin folder in the volume root | [optional] 
**ntpOfferSync** | **Bool** |  | [optional] 
**otpPolicy** | **String** |  | [optional] 
**tasksRunScheduled** | **Bool** |  | [optional] 
**usersDefaultPermissions** | **String** | Copy this value from an existing user | [optional] 
**workspacesFolderTemplatePath** | **String** |  | [optional] 
**workspacesPath** | **String** |  | [optional] 

[[Back to Model list]](../#documentation-for-models) [[Back to API list]](../#documentation-for-api-endpoints) [[Back to README]](../)


