versions/3.4.0-beta.1/docs/Parameters.md
# Parameters

## Properties

Name | Type | Description | Notes
------------ | ------------- | ------------- | -------------
**id** | **Int** |  | [optional] [readonly] 
**mediaForceShowDeleted** | **Bool** |  | [optional] 
**analytics** | **Bool** |  | [optional] 
**identifyCommand** | **String** |  | [optional] 
**externalUrl** | **String** | http://host/ | [optional] 
**brandingCss** | **String** |  | [optional] 
**brandingLogo** | **String** |  | [optional] 
**fmNewDirectoryMode** | **String** |  | [optional] 
**icapServer** | **String** |  | [optional] 
**icapPort** | **Int** |  | [optional] 
**icapService** | **String** |  | [optional] 
**icapScanUploads** | **Bool** |  | [optional] 
**ltfsDefaultRestoreToOriginalLocation** | **Bool** |  | [optional] 
**ltfsDefaultSearchDirectories** | **Bool** |  | [optional] 
**ltfsLibraryAddress** | **String** |  | [optional] 
**mediaAutoPlay** | **Bool** |  | [optional] 
**mediaAutoTransport** | **Bool** |  | [optional] 
**mediaAutoScan** | **Bool** |  | [optional] 
**mediaAutoProxy** | **Bool** |  | [optional] 
**mediaAutoVeritoneUpload** | **Bool** |  | [optional] 
**mediaProxyH264Preset** | **String** |  | [optional] 
**mediaDefaultCustomFieldType** | **String** |  | [optional] 
**mediaDefaultDeleteBehaviour** | **String** |  | [optional] 
**mediaRecycleBin** | **Bool** | Recycle bin is usually in the .recycle-bin folder in the volume root | [optional] 
**fileManagerRecycleBin** | **Bool** | Recycle bins are usually either in Workspace/Share or Volume folder | [optional] 
**ntpOfferSync** | **Bool** |  | [optional] 
**slugifyWorkspacePath** | **Bool** | Affects new workspaces only | [optional] 
**slugifyShares** | **Bool** | Requires | [optional] 
**smtpFrom** | **String** |  | [optional] 
**smtpServer** | **String** |  | [optional] 
**smtpPort** | **Int** |  | [optional] 
**smtpTls** | **String** |  | [optional] 
**smtpUsername** | **String** |  | [optional] 
**smtpEhlo** | **String** |  | [optional] 
**mailStyling** | **String** |  | [optional] 
**tasksLimit** | **Int** |  | [optional] 
**tasksHardLimit** | **Int** |  | [optional] 
**umaskAfp** | **String** |  | [optional] 
**umaskSmb** | **String** |  | [optional] 
**usersDefaultPermissions** | **String** | Copy this value from an existing user | [optional] 
**workspacesFolderTemplatePath** | **String** |  | [optional] 
**workspacesMode** | **String** |  | [optional] 
**workspacesPath** | **String** |  | [optional] 
**language** | **String** |  | [optional] 
**emailLogoUrl** | **String** |  | [optional] 
**mediaKeepSelectionWhenBrowsing** | **Bool** |  | [optional] 
**tasksRunScheduled** | **Bool** |  | [optional] 
**httpsRedirect** | **String** |  | [optional] 
**sslCertificate** | **String** |  | [optional] 
**sslCertificateKey** | **String** |  | [optional] 
**otpPolicy** | **String** |  | [optional] 

[[Back to Model list]](../#documentation-for-models) [[Back to API list]](../#documentation-for-api-endpoints) [[Back to README]](../)


